images no longer overlap project title

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -300,7 +300,7 @@ footer a {
 .document-list li img {
     display: block;
 	max-width: 180px;
-	max-height: 150px;
+	max-height: 130px;
     margin: auto;
 }
 
